# Slide-generator-lab

./: .env.example  .gitignore  CHANGELOG.md  README.md  presentation-b4ee20e85159.pptx  pyproject.toml  requirements.txt  style.html
.claude/: launch.json
FundLok - University Introduction Deck c2_template/: library.json
FundLok - University Introduction Deck c2_template/ABOUT_US/: category.json  standard.schema.json
FundLok - University Introduction Deck c2_template/COMPANY_DETAILS/: category.json  standard.schema.json
FundLok - University Introduction Deck c2_template/CONTACT/: category.json  standard.schema.json
FundLok - University Introduction Deck c2_template/CURRENT_STATUS/: category.json  standard.schema.json
FundLok - University Introduction Deck c2_template/DIFFERENTIATORS/: category.json  standard.schema.json
agents/: 01_keywords.md  02_research.md  03_planner.md  04_variant_mapper.md  05_writer.md  06_theme.md  07_images.md  08_assembler.md  README.md
docs/: FASTAPI_INTEGRATION.md  SERVICE_BRIEF.md  UPDATE_0.2.26.md  USING_IN_YOUR_REPO.md
examples/: build_course_deck.py  cloud_doc.json  generate_deck.py  merge_deck.py  prepare_template.py  recolor_deck.py  rich_doc.json  sample_doc.json  test_template.py  web_deck.py
guides/: style.md
slide_skills/: __init__.py  agent.py  animations.py  assembler.py  config.py  content_generator.py  document_deck.py  html_deck.py  html_theme.py  image_generator.py  merge_template.py  pipeline.py  planner.py  research.py  slide_filler.py  smart_template.py  svg_categories.py  svg_collections.py  svg_image_generator.py  svg_slide_renderer.py  svg_template_maker.py  template_maker.py  template_parser.py  theme.py  transitions.py  usage.py
slide_skills.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
svg_templates/: README.md
tests/: test_assembler.py  test_offline_pipeline.py  test_openrouter_support.py  test_svg_collections.py
(+95 files in other folders)
