[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "slide-skills"
version = "0.2.1"
description = "AI slide generation skills — fill .pptx/SVG templates with AI text, images, themes, and animations"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Phat Huynh" }]
dependencies = [
    "python-pptx>=1.0",
    "openai>=1.40",
    "pillow>=10.0",
    "python-dotenv>=1.0",
    "lxml>=4.9",
    "resvg-py>=0.1",
]

[project.optional-dependencies]
# pptx -> SVG template conversion (svg_template_maker)
svg-convert = ["pymupdf>=1.24"]
# fallback SVG rasterizer when resvg/cairo unavailable (svg_image_generator)
svg-fallback = ["svglib>=1.5", "reportlab>=4.0"]
# everything
all = ["pymupdf>=1.24", "svglib>=1.5", "reportlab>=4.0"]

[tool.setuptools]
packages = ["slide_skills"]
